--- a/src/components/itemCards/ItemCards.scss
+++ b/src/components/itemCards/ItemCards.scss
@@ -7,6 +7,7 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 30px;
   margin: 50px auto;
+  background-color: aqua;
 
   .cards {
     display: flex;
@@ -14,6 +15,7 @@
     justify-content: center;
     cursor: pointer;
     transition: 0.4s;
+    background-color: antiquewhite;
 
     &:hover img {
       transform: scale(1.1);
@@ -22,6 +24,7 @@
     .image-container {
       background-color: $dark-20;
       width: 100%;
+      min-width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -61,6 +64,16 @@
         font-size: 18px;
         color: $dark-10;
       }
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .productCards--section {
+    width: 100%;
+
+    .cards {
+      margin: 0 10px;
     }
   }
 }
