--- a/src/components/shopItems/ShopItems.scss
+++ b/src/components/shopItems/ShopItems.scss
@@ -9,6 +9,10 @@
   align-items: center;
   gap: 20px;
 
+  h1 {
+    text-align: center;
+  }
+
   p {
     width: 35%;
     max-width: 1216px;
@@ -22,6 +26,14 @@
   .title--shopItems {
     p {
       width: 90%;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .title--shopItems {
+    h1 {
+      font-size: 30px;
     }
   }
 }
