--- a/src/components/itemCards/ItemCards.scss
+++ b/src/components/itemCards/ItemCards.scss
@@ -22,6 +22,7 @@
     .image-container {
       background-color: $dark-20;
       width: 100%;
+      min-width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
